--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".view.activity.patient.SignUpEmailActivity" />
         <activity android:name=".view.activity.patient.OTP_Activity" />
-        <activity android:name=".view.activity.patient.SexNDobRegActivity"></activity>
+        <activity android:name=".view.activity.patient.SexNDobRegActivity" />
+        <activity android:name=".view.activity.doctor.DocSignUpEmailActivity"></activity>
     </application>
 
 </manifest>
