--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.electrocraft.nirzo.pluse">
 
     <application
-        android:name="com.activeandroid.app.Application"
+        android:name=".controller.ApplicationClass"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -36,7 +36,9 @@
         <activity android:name=".view.activity.patient.SignUpEmailActivity" />
         <activity android:name=".view.activity.patient.OTP_Activity" />
         <activity android:name=".view.activity.patient.SexNDobRegActivity" />
-        <activity android:name=".view.activity.doctor.DocSignUpEmailActivity"></activity>
+        <activity android:name=".view.activity.doctor.DocSignUpEmailActivity" />
+        <activity android:name=".view.activity.patient.PtDoctorProfileActivity" />
+        <activity android:name=".view.activity.patient.PtAppointBookActivity"></activity>
     </application>
 
 </manifest>
