--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.electrocraft.nirzo.pluse">
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".controller.AppController"
+        android:name=".controller.application.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,9 +18,12 @@
             android:value="pulse_db.db" />
         <meta-data
             android:name="AA_DB_VERSION"
-            android:value="2" />
-        <meta-data android:name="AA_MODELS"
-            android:value="com.electrocraft.nirzo.pluse.model.dba.User"/>
+            android:value="3" />
+        <meta-data
+            android:name="AA_MODELS"
+            android:value="com.electrocraft.nirzo.pluse.model.dba.User,
+             com.electrocraft.nirzo.pluse.model.deserialization.PatientShortInfo,
+            com.electrocraft.nirzo.pluse.model.deserialization.DocAppointments" />
 
         <activity android:name=".view.MainActivity" />
         <activity
