--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     defaultConfig {
         applicationId "com.electrocraft.nirzo.pluse"
         minSdkVersion 17
-        targetSdkVersion 26
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:26.1.0'
@@ -35,26 +35,19 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
     //butter knife
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
     // active android for data base
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
-
     // RecyclerView
     implementation 'com.android.support:recyclerview-v7:26.1.0'
-
     // Fixable Logging library Timber
     implementation 'com.jakewharton.timber:timber:4.6.1'
-
     // Gson  library  can be used to convert Java Objects into  JSON
     compile 'com.google.code.gson:gson:2.8.2'
-
     // Volley
     compile 'com.android.volley:volley:1.0.0'
-
     compile 'org.jitsi.react:jitsi-meet-sdk:1.9.0'
 
 }
