--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:name=".controller.application.AppController"
@@ -22,6 +24,7 @@
         <meta-data
             android:name="AA_MODELS"
             android:value="com.electrocraft.nirzo.pluse.model.dba.User,
+            com.electrocraft.nirzo.pluse.model.dba.PatientUser,
              com.electrocraft.nirzo.pluse.model.deserialization.PatientShortInfo,
             com.electrocraft.nirzo.pluse.model.deserialization.DocAppointments" />
 
