--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,8 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'org.jitsi.react:jitsi-meet-sdk:1.9.0'
 
-
+    //for round image
+    compile 'de.hdodenhof:circleimageview:2.1.0'      // use this or use the latest compile version. In case u get bug.
 
    // compile 'dev.dworks.libs:volleyplus:+'
 
