--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,13 @@ android {
         versionCode 3
         versionName "1.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            abiFilters "armeabi-v7a", "x86"
+        }
+
+        packagingOptions {
+            exclude "lib/arm64-v8a/librealm-jni.so"
+        }
     }
     buildTypes {
         release {
@@ -32,6 +39,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.google.firebase:firebase-messaging:11.0.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
@@ -51,8 +59,16 @@ dependencies {
     compile 'org.jitsi.react:jitsi-meet-sdk:1.9.0'
 
     //for round image
-    compile 'de.hdodenhof:circleimageview:2.1.0'      // use this or use the latest compile version. In case u get bug.
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    // use this or use the latest compile version. In case u get bug.
 
-   // compile 'dev.dworks.libs:volleyplus:+'
+    // compile 'dev.dworks.libs:volleyplus:+'
+
+    // Add this line
+    compile 'com.google.firebase:firebase-core:11.0.4'
+    compile 'com.google.firebase:firebase-messaging:10.2.1'
 
 }
+
+// Add to the bottom of the file
+apply plugin: 'com.google.gms.google-services'
