--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,7 @@
         <activity android:name=".view.activity.doctor.DocRegistrationActivity" />
         <activity
             android:name=".view.fragment.PtSeeDoctorProfileActivity"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/DefaultActivity" />
         <activity android:name=".view.activity.patient.PtAppointBookActivity" />
         <activity android:name=".view.activity.doctor.DoctorHomeActivity" />
         <activity android:name=".controller.network.NotifySMSReceived">
