--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,9 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
 
 
+    //Sweet alert
+    compile 'com.github.f0ris.sweetalert:library:1.5.1'
+
 }
 
 // Add to the bottom of the file
