--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -115,6 +115,7 @@
         </service>
 
         <activity android:name=".view.activity.LoginAsActivity"></activity>
+        <activity android:name=".view.activity.doctor.DoctorPrescription"/>
     </application>
 
 </manifest>
