--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
         packagingOptions {
             exclude "lib/arm64-v8a/librealm-jni.so"
         }
+
+        multiDexEnabled true
+
     }
     buildTypes {
         release {
@@ -40,7 +43,8 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
-    implementation 'com.google.firebase:firebase-messaging:11.8.0'
+    implementation 'com.google.firebase:firebase-messaging:11.0.4'
+    implementation 'com.google.firebase:firebase-auth:11.0.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
@@ -66,14 +70,22 @@ dependencies {
     // compile 'dev.dworks.libs:volleyplus:+'
 
     // Add this line
-    compile 'com.google.firebase:firebase-core:11.8.0'
-    compile 'com.google.firebase:firebase-messaging:11.8.0'
-    implementation 'com.google.firebase:firebase-messaging:11.8.0'
+    compile 'com.google.firebase:firebase-core:11.0.4'
+    compile 'com.google.firebase:firebase-messaging:11.0.4'
+    implementation 'com.google.firebase:firebase-messaging:11.0.4'
 
     implementation 'com.android.support:cardview-v7:26.1.0'
 
     //Sweet alert
     compile 'com.github.f0ris.sweetalert:library:1.5.1'
+
+
+    // Facebook SDK
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+
+    //  netowrking lib
+//    compile 'com.amitshekhar.android:android-networking:1.0.1'
+    compile 'com.android.support:multidex:1.0.1'
 
 }
 
