--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,26 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
+
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
+
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+        <activity
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="@string/fb_login_protocol_scheme" />
+            </intent-filter>
+        </activity>
+
         <meta-data
             android:name="AA_DB_NAME"
             android:value="pulse_db.db" />
@@ -42,15 +62,19 @@
             android:name=".view.activity.SplashScreen"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme_Splash">
+        </activity>
+        <activity
+            android:name=".view.activity.LoginActivity"
+            android:windowSoftInputMode="stateHidden" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+
         </activity>
-        <activity
-            android:name=".view.activity.LoginActivity"
-            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".view.activity.patient.PatientHomeActivity"
             android:label="@string/title_activity_home"
