--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,9 @@ dependencies {
 //    compile 'com.amitshekhar.android:android-networking:1.0.1'
     compile 'com.android.support:multidex:1.0.1'
 
+    compile 'com.github.barteksc:android-pdf-viewer:2.8.2'
+/*    compile 'org.apache.commons:commons-io:1.3.2'*/
+
 }
 
 // Add to the bottom of the file
