--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,19 +48,27 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
     //butter knife
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
     // active android for data base
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+
     // RecyclerView
     implementation 'com.android.support:recyclerview-v7:26.1.0'
+
     // Fixable Logging library Timber
     implementation 'com.jakewharton.timber:timber:4.6.1'
+
     // Gson  library  can be used to convert Java Objects into  JSON
     compile 'com.google.code.gson:gson:2.8.2'
+
     // Volley
     compile 'com.android.volley:volley:1.0.0'
+
+    // jitsi meet for video conference
     compile 'org.jitsi.react:jitsi-meet-sdk:1.9.0'
 
     //for round image
@@ -83,12 +91,10 @@ dependencies {
     // Facebook SDK
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
 
-    //  netowrking lib
-//    compile 'com.amitshekhar.android:android-networking:1.0.1'
-    compile 'com.android.support:multidex:1.0.1'
 
+    compile 'com.android.support:multidex:1.0.1'
     compile 'com.github.barteksc:android-pdf-viewer:2.8.2'
-/*    compile 'org.apache.commons:commons-io:1.3.2'*/
+
 }
 
 // Add to the bottom of the file
