--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
-
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
@@ -27,8 +26,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
-
-
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
@@ -73,19 +70,19 @@
         </activity>
         <activity
             android:name=".view.activity.LoginActivity"
-            android:windowSoftInputMode="stateHidden">
-
-
-        </activity>
+            android:windowSoftInputMode="stateHidden"></activity>
         <activity
             android:name=".view.activity.patient.PatientHomeActivity"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme">
-            <!--   <intent-filter>
+
+            <!--
+                   <intent-filter>
                          <action android:name="android.intent.action.MAIN" />
 
                          <category android:name="android.intent.category.LAUNCHER" />
-                     </intent-filter>-->
+                     </intent-filter>
+            -->
 
         </activity>
         <activity android:name=".view.activity.patient.SignUpEmailActivity" />
@@ -95,11 +92,14 @@
         <activity
             android:name=".view.activity.patient.PtSeeDoctorProfileActivity"
             android:theme="@style/DefaultActivity">
-            <!--<intent-filter>
+
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
 
         </activity>
         <activity android:name=".view.activity.patient.PtAppointBookActivity" />
@@ -107,6 +107,7 @@
         <activity android:name=".view.activity.doctor.DocNotifyCallReceivedAlertActivity">
             <intent-filter>
                 <action android:name="click_action" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -124,15 +125,15 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-
         <service android:name=".fcm.MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
-        <activity android:name=".view.activity.LoginAsActivity"></activity>
+        <activity android:name=".view.activity.LoginAsActivity" />
         <activity android:name=".view.activity.doctor.DoctorPrescriptionActivity" />
+
     </application>
 
 </manifest>
